# cimple

./: .clang-format  .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  CMakeLists.txt  DEVELOPMENT.md  Dockerfile  LICENSE.txt  Makefile  README.md  ci  ci.sh  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
coverage/: index.base64.c.6cc41135837c80527c8f246c27adf87e.html  index.buf.c.ed8381695b8bbc07634acc8fcf3aab27.html  index.ci.c.aafc6aa1373a4054fe8dceca1e5a2cd2.html  index.client.c.7eeddcdb2bd1344daca0a340abd305ae.html  index.client_main.c.0ff1a98449e6ae22cf540fe28921fa2d.html  index.cmd_line.c.fc55483624faae9ff92546137d095857.html  index.command.c.d26991ef13eb41283f88bf34125ef986.html  index.event_loop.c.037d09258818a0617a2d29f47e2b5064.html  index.file.c.0cc24881e570d19e625204519d50254f.html  index.functions.html  index.git.c.ecafe65200a95f92fc10a3095d9e5f09.html  index.html  index.json.c.9fe0913c76249e448eec3131d7e8b263.html  index.json_rpc.c.2aeccc6679171fb423f72eef95ec01c0.html  index.log.c.47179e5db7ed3f2db741c99372ba24f3.html  index.net.c.37012fce13860cefc5963f57e0f36732.html  index.process.c.52f9324f34485af6c2c0f7cc7bbf5f8b.html  index.protocol.c.4964764a2e677a55c2f4207a995c3ce7.html  index.run_queue.c.fdfaa39d71447cf1e7d01ff206bd91e5.html  index.server.c.0235f01a49d01b35e981a41f59a9d2d6.html  index.server_main.c.3ca591a47eaf0cc37ef7579efe6031fe.html  index.signal.c.71d63611c8a63e0778dd598afad76dfd.html  index.sqlite.c.13cf77e7262c599539f10e3be0248b3e.html  index.storage.c.96d197609feea4b630e7b775fb18af81.html  index.storage_sqlite.c.b44f7f73d467be85cd4227a40c11d12a.html  index.string.c.2a75186e465ffeac1b306a350f4a56f8.html  index.tcp_server.c.68fbb5aebb39dbc263f5110d228c9b35.html  index.worker.c.4cbdfac39be7d0330fdfd94f65ce9ea9.html  index.worker_main.c.3e96ea0429977547c8b5eee564591fe0.html  index.worker_queue.c.aeb7258cd8f695c41a9aa8634701b38c.html
doc/: rationale.md
scripts/: flamegraph.sh  pre-commit  pre-commit.sh  setup-hooks  setup-hooks.sh  valgrind.sh
src/: .clang-format  CMakeLists.txt  base64.c  base64.h  buf.c  buf.h  ci.c  ci.h  ci_queue.c  ci_queue.h  client.c  client.h  client_main.c  cmd.c  cmd.h  cmd_line.c  cmd_line.h  command.c  command.h  compiler.h  const.c.template  const.h  event_loop.c  event_loop.h  file.c  file.h  generate-sql-header.py  git.c  git.h  json.c  json.h  json_rpc.c  json_rpc.h  log.c  log.h  msg.c  msg.h  net.c  net.h  process.c  (+26 more)
src/sqlite/: v01.sql
test/: CMakeLists.txt  conftest.py  pytest.ini  test_basic.py
test/lib/: process.py  test_repo.py
test/lib/test_repo/: ci.sh
test/py/: conftest.py  requirements.txt  test_basic.py  test_repo.py
test/py/lib/: db.py  logging.py  net.py  process.py  test_repo.py  tests.py
test/sigsegv/: CMakeLists.txt  lib.c  lib.h  main.c
test/src/: conftest.py  test_basic.py  test_repo.py
test/src/lib/: db.py  logging.py  net.py  process.py  test_repo.py  tests.py
